--- a/Views/SustainableBusinessPage.cshtml
+++ b/Views/SustainableBusinessPage.cshtml
@@ -7,7 +7,7 @@
 
 <div class="tentang-jumbotron">
 	<img src="@Model.HeroBackgroundImage.Url()" class="blueprint">
-	
+
 	<div class="container-fluid content">
 		<h1>@Model.HeroTitle</h1>
 		<h2>@Model.HeroSubtitle</h2>
@@ -26,25 +26,25 @@
 </div>
 
 <div class="container sustainable-container rich-text-content">
-    <h4>@Model.SustainableBusinessContentTitleHijau</h4>
-    <p>@Model.SustainableBusinessContent</p>
+	<h4>@Model.SustainableBusinessContentTitleHijau</h4>
+	<p>@Model.SustainableBusinessContent</p>
 </div>
 
 <div class="container sustainable-business-image">
-    <h3>@Model.SustainableBusinessImageTitle</h3>
-    <img src="@Model.SustainableBusinessImage.Url()">
+	<h3>@Model.SustainableBusinessImageTitle</h3>
+	<img src="@Model.SustainableBusinessImage.Url()">
 </div>
 
-<div class="container px-2 sustainable-sub-content sustainable-sub-content-1">
-    <img src="@Model.SubContent1Image.Url()">
-	<h4>@Model.SubContent1Title</h4>
-    
-    <p>@Model.SubContent1</p>
+<div class="container px-2 sustainable-sub-content sustainable-sub-content-1 rich-text-content">
+	<img src="@Model.SubContent1Image.Url()">
+	<h3>@Model.SubContent1Title</h3>
+
+	<p>@Model.SubContent1</p>
 </div>
 
-<div class="container px-2 sustainable-sub-content sustainable-sub-content-2">
+<div class="container px-2 sustainable-sub-content sustainable-sub-content-2 rich-text-content">
 	<img src="@Model.SubContent2Image.Url()">
-	<h4>@Model.SubContent2Title</h4>
-    
-    <p>@Model.SubContent2</p>
+	<h3>@Model.SubContent2Title</h3>
+
+	<p>@Model.SubContent2</p>
 </div>
