hapus hero subtitle

--- a/Views/CareerPage.cshtml
+++ b/Views/CareerPage.cshtml
@@ -9,7 +9,7 @@
 
 	<div class="container-fluid content">
 		<h1>@Model.HeroTitle</h1>
-		<h2>@Model.HeroSubtitle</h2>
+		@*<h2>@Model.HeroSubtitle</h2>*@
 	</div>
 </div>
 
@@ -38,10 +38,10 @@
 			@if (Model.CareerBannerLink != null)
 			{
 				<a href="@Model.CareerBannerLink.Url">@Model.CareerBannerLink.Name <i
-					class="fa-solid fa-arrow-right"></i></a>
+						class="fa-solid fa-arrow-right"></i></a>
 			}
 		</div>
 	</div>
 
-	@*  *@
+	@* *@
 </div>
