--- a/Views/GovernanceAndBusinessEthicsPage.cshtml
+++ b/Views/GovernanceAndBusinessEthicsPage.cshtml
@@ -9,7 +9,7 @@
 	
 	<div class="container-fluid content">
 		<h1>@Model.HeroTitle</h1>
-		<h2>@Model.HeroSubtitle</h2>
+		@*<h2>@Model.HeroSubtitle</h2>*@
 	</div>
 </div>
 <div class="bisnis-navbar">
