--- a/Views/WhoWeArePage.cshtml
+++ b/Views/WhoWeArePage.cshtml
@@ -6,10 +6,10 @@
 
 <div class="tentang-jumbotron">
 	<img src="@Model.HeroBackgroundImage.Url()" class="blueprint">
-	
+
 	<div class="container-fluid content">
 		<h1>@Model.HeroTitle</h1>
-		<h2>@Model.HeroSubtitle</h2>
+		@*<h2>@Model.HeroSubtitle</h2>*@
 	</div>
 </div>
 <div class="tentang-navbar">
@@ -25,27 +25,27 @@
 </div>
 
 <div class="container whoweare-content rich-text-content">
-    <img src="@Model.WhoweareContentImage1.Url()" class="w-50 rich-float-left">
-    <h4>@Model.WhoweareContentTitleHijau</h4>
-    <h3>@Model.WhoweareContentTitle</h3>
-    <p>@Model.WhoweareContent</p>
-    <img src="@Model.WhoweareContentImage2.Url()" class="w-100">
-    <p>@Model.WhoweareContentBawah</p>
+	<img src="@Model.WhoweareContentImage1.Url()" class="w-50 rich-float-left">
+	<h4>@Model.WhoweareContentTitleHijau</h4>
+	<h3>@Model.WhoweareContentTitle</h3>
+	<p>@Model.WhoweareContent</p>
+	<img src="@Model.WhoweareContentImage2.Url()" class="w-100">
+	<p>@Model.WhoweareContentBawah</p>
 </div>
 
 @*
 <div style="background-image: url('@Model.FaseBackgroundImage.Url()')" class="fase-wrapper">
-	fakk
+fakk
 </div>
 *@
 
-		
-	<div style="background-image: url('@Model.FaseBackgroundImage.Url()')" class="fase-wrapper">
-		<div class="container">
-			<h3>@Model.FaseTitle</h3>
-			<img src="@Model.FaseImage.Url()" alt="fase">
-			<p>
-				@Model.FaseContent
-			</p>
-		</div>
+
+<div style="background-image: url('@Model.FaseBackgroundImage.Url()')" class="fase-wrapper">
+	<div class="container">
+		<h3>@Model.FaseTitle</h3>
+		<img src="@Model.FaseImage.Url()" alt="fase">
+		<p>
+			@Model.FaseContent
+		</p>
 	</div>
+</div>
