--- a/Views/ContactPage.cshtml
+++ b/Views/ContactPage.cshtml
@@ -11,7 +11,7 @@
 <div class="tentang-jumbotron">
 	<img src="@Model.HeroBackgroundImage.Url()" class="blueprint">
 
-	<div class="container-fluid content">
+	<div class="container content">
 		<h1>@Model.HeroTitle</h1>
 		@*<h2>@Model.HeroSubtitle</h2>*@
 	</div>
