pengadaan card jadi satu

--- a/Views/HomePage.cshtml
+++ b/Views/HomePage.cshtml
@@ -212,7 +212,7 @@
 		<h2>@Model.PengadaanTitle</h2>
 		<p>@Model.PengadaanDescription</p>
 	</div>
-	<div class="swiper-wrapper">
+	<div class="swiper-wrapper  justify-content-center">
 		@if (Model.PengadaanCards != null)
 		{
 			foreach (var item in Model.PengadaanCards)
