--- a/Views/HssePage.cshtml
+++ b/Views/HssePage.cshtml
@@ -27,6 +27,7 @@
 
 <div class="container rich-text-content">
     <img src="@Model.HsseContentImage.Url()" class="rich-float-left w-50">
+    <h3>@Model.HsseContentTitle</h3>
     <p>@Model.HsseContent</p>
 </div>
 
@@ -36,22 +37,11 @@
         <div class="hsse-title">
             <h4 class="hsse-title-english">@Model.HsseTitle</h4>
         </div>
-<<<<<<< HEAD
-		
+
 		<div class="hsse-quotes hsse-quotes-indonesia">
             <h5>@Model.HsseQuotesTitle</h5>
             <h5>@Model.HsseQuotesText</h5>
-=======
-        <div class="hsse-quotes hsse-quotes-indonesia">
-            <h5>@Model.HsseQuotesTitleIndonesia</h5>
-            <h5>@Model.HsseQuotesTextIndonesia</h5>
-        </div>
 
-        <div class="hsse-quotes hsse-quotes-indonesia">
-            <h5>@Model.HsseQuotesTitleEnglish</h5>
-            <h5>@Model.HsseQuotesTextEnglish</h5>
->>>>>>> 8ef537c09afe3fab56de9fe8e07486ae19feafed
-        </div>
 		
         <div class="hsse-structure">
             <h6>@Model.HsseStructureTitle</h6>
