--- a/Views/MediaInformationPage.cshtml
+++ b/Views/MediaInformationPage.cshtml
@@ -80,3 +80,5 @@
 @Html.Partial("~/Views/Partials/listPengumuman.cshtml")
 
 @Html.Partial("~/Views/Partials/listLaporan.cshtml")
+
+@Html.Partial("~/Views/Partials/listPengadaanHorizontal.cshtml")
