--- a/Views/OurProjectsPage.cshtml
+++ b/Views/OurProjectsPage.cshtml
@@ -26,6 +26,10 @@
 </div>
 
 <div class="container container-projects-image">
+    <div class="rich-text-content">
+        <h3>@Model.ProjectsLocationContentTitle</h3>
+        <p>@Model.ProjectsLocationContent</p>
+    </div>
 	<img class="project-location" src="@Model.ProjectsLocation.Url()">
 	<img src="@Model.ProjectsFeatures.Url()">
 </div>
@@ -71,6 +75,10 @@
 				<h3>@Model.ProdukLainnyaTotalValue</h3>
 			</div>
 		</div>
+	</div>
+	<div class="rich-text-content">
+	    <h3>@Model.ProdukLainnyaContentTitle</h3>
+	    <p>@Model.ProdukLainnyaContent</p>
 	</div>
 </div>
 
